fixed flickering

--- a/home.css
+++ b/home.css
@@ -166,7 +166,7 @@ img {
     width: 100%;
     transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-img:hover {
+.grids:hover > img {
     transform: translate(-40px, -40px);
     transition: 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
     box-shadow: 10px 13px rgb(95, 210, 137),20px 26px rgb(107, 195, 206),30px 39px rgb(138, 201, 195),40px 52px rgb(183, 135, 213);
